--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,7 +14,7 @@ docker-build:
   stage: build
   script:
     - echo "Build application"
-    - docker build -t my-docker-image .
+    - docker build -t cycloid/demo-gitlab-wordpress:latest .
 
 docker-push:
   stage: push
