--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,8 @@
 image: docker:19.03.12
 
+services:
+  - docker:19.03.12-dind
+
 stages:
   - test
   - build
@@ -14,11 +17,11 @@ docker-build:
   stage: build
   script:
     - echo "Build application"
-    - docker build -t cycloid/demo-gitlab-wordpress:latest .
 
 docker-push:
   stage: push
   script:
     - echo "Publish on dockerhub"
+    - docker build -t cycloid/demo-gitlab-wordpress:latest .
     - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD
     - docker push cycloid/demo-gitlab-wordpress:latest
